# Buffalo

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_grammar.cpp  main.cpp
src/: CMakeLists.txt  Grammar.cpp  Grammar.h  Parser.h  RecursiveFunctionsGrammar.cpp  RecursiveFunctionsGrammar.h  SyntaxNode.h
src/earley/: EarleyParser.cpp  EarleyParser.h
src/grammar/: BuildersRegistry.h  Grammar.cpp  Grammar.h  GrammarBuilder.cpp  GrammarBuilder.h  GrammarProduction.h
src/helpers/: Hashers.h  TupleHasher.h
src/lexis/: LexicalAnalyzer.h
src/lr/: LRParser.cpp  LRParser.h  LRTableBuilder.cpp  LRTableBuilder.h  LRTableSerializer.cpp  LRTableSerializer.h  Position.h  TokensBitset.h
tests/: CMakeLists.txt
tests/unit/: EarleyParserTests.cpp  GrammarBuilderTests.cpp  GrammarTests.cpp  LRParserTests.cpp  LRTableBuilderTests.cpp  TestGrammars.cpp  TestGrammars.h
